--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopbootstrap-claim.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopbootstrap-claim.yaml
@@ -21,7 +21,7 @@ spec:
       destinationType: sc
   providerConfigsRef:
     netbirdProviderConfigName: "netbird-crossplane-provider-config"
-    ccK8sProviderName: "cc-kubernetes-provider"
+    ccK8sProviderName: "kubernetes-provider"
     scK8sProviderName: "sc-kubernetes-provider"
   managementPolicies:
     - "*"
