fix operator cluster name

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopinstall-claim.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/netbird-post-config/nbopinstall-claim.yaml
@@ -14,6 +14,7 @@ spec:
     operatorArgoAppSourceURL: https://github.com//mojaloop/iac-modules.git
     operatorArgoAppSourceRevision: "feature/storage-cluster"
     operatorKubeapiGroupName: sc-k8s
+    operatorClusterName: storage-cluster
   providerConfigsRef:
     scK8sProviderName: "sc-kubernetes-provider"
   managementPolicies:
