--- a/gitops/applications/base/monitoring/values-mimir.yaml
+++ b/gitops/applications/base/monitoring/values-mimir.yaml
@@ -29,9 +29,15 @@ mimir:
       storage_prefix: alertmanager
     ruler_storage:
       storage_prefix: ruler
-
-
-
+    memberlist:
+      advertise_port: ${ARGOCD_ENV_mimir_gossip_ring_port}
+      bind_port: ${ARGOCD_ENV_mimir_gossip_ring_port} # use custom memberlist.bind_port to keep loki and mimir rings separate
+  gossipRing:
+    service:
+      ports:
+        http: ${ARGOCD_ENV_mimir_gossip_ring_port} 
+  containerPorts:
+    gossipRing: ${ARGOCD_ENV_mimir_gossip_ring_port}
 metrics:
   enabled: true
   serviceMonitor:
