Add crossplane functions

--- a/terraform/k8s/default-config/common-vars.yaml
+++ b/terraform/k8s/default-config/common-vars.yaml
@@ -60,4 +60,8 @@ rook_ceph_helm_version: "1.16.5"
 crossplane_helm_version: "1.19.0"
 crossplane_providers_k8s_version: "0.11.4"
 crossplane_providers_vault_version: "2.1.1"
+crossplane_functions_patch_and_transform_version: "0.8.2"
+crossplane_functions_go_templating_version: "0.8.0"
+crossplane_functions_kcl_version: "0.11.3"
+crossplane_functions_auto_ready_version: "0.4.2"
 crossplane_packages_utils_version: "v0.3.0-pr48-14533733180"
