--- a/gitops/applications/base/gitlab-post-config/kustomization.yaml
+++ b/gitops/applications/base/gitlab-post-config/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - gitlab-post-config.yaml
+  - gitlab-provider-config.yaml
   - gitlab-pf-xplane-terraform.yaml
   - gitlab-zitadel-roles-xplane.yaml
