--- a/gitops/argo-apps/base/netbird-operator.yaml
+++ b/gitops/argo-apps/base/netbird-operator.yaml
@@ -1,10 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ${ARGOCD_ENV_security_netbird_app_name}-post-config
+  name: ${ARGOCD_ENV_security_netbird_operator_app_name}
   namespace: ${ARGOCD_ENV_security_app_namespace}
   annotations:
-    argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_security_netbird_post_sync_wave}
+    argocd.argoproj.io/sync-wave: ${ARGOCD_ENV_security_netbird_operator_sync_wave}
 
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -32,7 +32,34 @@ spec:
   sources:
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
-      path: gitops/applications/base/netbird-post-config
+      path: gitops/applications/base/netbird-operator
+      plugin:
+        name: envsubst
+        env:
+          - name: "netbird_operator_helm_version"
+            value: "${ARGOCD_ENV_security_netbird_operator_helm_version}"
+
+          - name: "netbird_operator_namespace"
+            value: "${ARGOCD_ENV_security_netbird_operator_namespace}"
+
+          - name: "netbird_operator_app_name"
+            value: "${ARGOCD_ENV_security_netbird_operator_release_name}"
+
+          - name: "netbird_operator_management_url"
+            value: "https://netbird.${ARGOCD_ENV_security_netbird_dns_subdomain}:443"
+
+          - name: "netbird_operator_kubeapi_group"
+            value: "${ARGOCD_ENV_security_netbird_operator_kubeapi_group}"
+
+          - name: "netbird_operator_api_key_secret"
+            value: "nb-operator-api-key"
+
+          - name: "netbird_operator_sync_wave"
+            value: "${ARGOCD_ENV_security_netbird_operator_sync_wave}"
+
+    - repoURL: ${ARGOCD_ENV_argocd_repo_url}
+      targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
+      path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_utils_capi_cloud_provider}/storage-provider/netbird-operator
       plugin:
         name: envsubst
         env:
@@ -59,6 +86,12 @@ spec:
 
           - name: "setup_key_secret_name"
             value: "${ARGOCD_ENV_security_netbird_setup_key_secret_name}"
+
+          - name: "gw_setup_key_secret_key"
+            value: "${ARGOCD_ENV_security_netbird_gw_setup_key_secret_key}"
+
+          - name: "build_setup_key_secret_key"
+            value: "${ARGOCD_ENV_security_netbird_build_setup_key_secret_key}"
 
           - name: "netbird_ansible_collection_tag"
             value: ${ARGOCD_ENV_security_netbird_ansible_collection_tag}
@@ -99,8 +132,11 @@ spec:
           - name: "argocd_namespace"
             value: "${ARGOCD_ENV_utils_argocd_helm_namespace}"
 
-          - name: "netbird_operator_kubeapi_group"
-            value: "${ARGOCD_ENV_security_netbird_operator_kubeapi_group}"
+          - name: "netbird_operator_helm_version"
+            value: "${ARGOCD_ENV_security_netbird_operator_helm_version}"
 
-          - name: "netbird_operator_api_key_secret"
-            value: "nb-operator-api-key"
+          - name: "netbird_operator_management_url"
+            value: "https://netbird.${ARGOCD_ENV_security_netbird_dns_subdomain}:443"
+
+          - name: "netbird_operator_argoapp_revision"
+            value: ${ARGOCD_ENV_security_application_gitrepo_tag}
