--- a/gitops/applications/base/gitlab-post-config/gitlab-provider-config.yaml
+++ b/gitops/applications/base/gitlab-post-config/gitlab-provider-config.yaml
@@ -9,6 +9,6 @@ spec:
     source: Secret
     secretRef:
       namespace: gitlab
-      name: gitlab-gitlab-initial-root-password
+      name: root-token-secret
       key: password
   baseURL: "https://${ARGOCD_ENV_gitlab_fqdn}"
