--- a/gitops/applications/base/gitlab-post-config/gitlab-provider-config.yaml
+++ b/gitops/applications/base/gitlab-post-config/gitlab-provider-config.yaml
@@ -11,4 +11,4 @@ spec:
       namespace: gitlab
       name: root-token-secret
       key: password
-  baseURL: "https://giitlab.${ARGOCD_ENV_gitlab_dns_subdomain}"
+  baseURL: "https://gitlab.${ARGOCD_ENV_gitlab_dns_subdomain}"
