--- a/gitops/argo-apps/base/netbird-operator.yaml
+++ b/gitops/argo-apps/base/netbird-operator.yaml
@@ -69,6 +69,9 @@ spec:
           - name: "netbird_preconfig_output_secret"
             value: "${ARGOCD_ENV_security_netbird_preconfig_output_secret}"
 
+          - name: "netbird_operator_cluster_name"
+            value: ${ARGOCD_ENV_cluster_name}
+
     - repoURL: ${ARGOCD_ENV_argocd_repo_url}
       targetRevision: ${ARGOCD_ENV_security_application_gitrepo_tag}
       path: gitops/applications/overlays/cloud_provider/${ARGOCD_ENV_utils_capi_cloud_provider}/storage-provider/netbird-operator
