fix: debug vault providerconfigs

--- a/gitops/applications/base/vault-post-config/vault-provider-config.yaml
+++ b/gitops/applications/base/vault-post-config/vault-provider-config.yaml
@@ -6,7 +6,7 @@ spec:
   address: "http://vault-active.${ARGOCD_ENV_vault_namespace}.svc.cluster.local:8200"
   credentials:
     secretRef:
-      key: root_token
+      key: creds
       name: vault-keys
       namespace: ${ARGOCD_ENV_vault_namespace}
     source: Secret
