--- a/gitops/applications/base/gitlab-post-config/kustomization.yaml
+++ b/gitops/applications/base/gitlab-post-config/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 resources:
   - gitlab-post-config.yaml
   - gitlab-provider-config.yaml
-  - gitlab-pf-xplane-terraform.yaml
+  # - gitlab-pf-xplane-terraform.yaml
   - gitlab-zitadel-roles-xplane.yaml
