--- a/gitops/applications/base/crossplane-providers/vault.yaml
+++ b/gitops/applications/base/crossplane-providers/vault.yaml
@@ -4,4 +4,4 @@ kind: Provider
 metadata:
   name: provider-vault
 spec:
-  package: xpkg.upbound.io/upbound/provider-vault:v2.1.1
+  package: xpkg.upbound.io/upbound/provider-vault:v${ARGOCD_ENV_crossplane_providers_vault_version}
