--- a/gitops/argo-apps/base/capi.yaml
+++ b/gitops/argo-apps/base/capi.yaml
@@ -118,3 +118,9 @@ spec:
 
         - name: "sc_root_argocd_repo_url"
           value: "${ARGOCD_ENV_argocd_repo_url}"
+
+        - name: "capi_os_disk_size"
+          value: "${ARGOCD_ENV_utils_capi_capi_os_disk_size}"
+
+        - name: "capi_rook_ceph_disk_size"
+          value: "${ARGOCD_ENV_utils_capi_capi_rook_ceph_disk_size}"
