--- a/terraform/ccnew/default-config/common-vars.yaml
+++ b/terraform/ccnew/default-config/common-vars.yaml
@@ -349,4 +349,6 @@ capi_cluster_network_gateway: "10.10.127.1"
 capi_cluster_proxmox_host_vlan: "'127'"
 sc_metallb_ip_range_begin: "10.10.127.10"
 sc_metallb_ip_range_end: "10.10.127.20"
+capi_os_disk_size: "100G"
+capi_rook_ceph_disk_size: "300G"
 ##end capi
