change scrap interval of kubeApiServer

--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -41,9 +41,9 @@ kubelet:
         replacement: "${1}"
         action: replace
 
-# kubeApiServer:
-#   serviceMonitor:
-#     interval: 5m
+kubeApiServer:
+  serviceMonitor:
+    interval: 5m
 
 # kube-state-metrics:
 #   serviceMonitor:
