update interval of kube-state-metrics

--- a/gitops/applications/base/monitoring/values-kube-prometheus.yaml
+++ b/gitops/applications/base/monitoring/values-kube-prometheus.yaml
@@ -45,9 +45,9 @@ kubeApiServer:
   serviceMonitor:
     interval: 5m
 
-# kube-state-metrics:
-#   serviceMonitor:
-#     interval: 5m
+kube-state-metrics:
+  serviceMonitor:
+    interval: 5m
 
 node-exporter:
   serviceMonitor:
