fix: point sc-bootstrap to feat/gitlab-post-config-rework for now

--- a/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
+++ b/gitops/applications/overlays/cloud_provider/private-cloud/storage-provider/capi-post-config/sc-bootstrap.yaml
@@ -8,7 +8,7 @@ spec:
     argocd:
       application:
         source:
-          targetRevision: feat/sc-bootstrap
+          targetRevision: feat/gitlab-post-config-rework
           envVars:
           - name: "argocd_repo_url"
             value: "${ARGOCD_ENV_argocd_repo_url}"
