--- a/gitops/applications/base/crossplane-providers/vault.yaml
+++ b/gitops/applications/base/crossplane-providers/vault.yaml
@@ -4,5 +4,5 @@ kind: Provider
 metadata:
   name: provider-vault
 spec:
-  package: xpkg.upbound.io/upbound/provider-vault:v2
+  package: ghcr.io/mojaloop/infra/upbound/provider-vault:v2.1.3
   #package: ghcr.io/mojaloop/infra/upbound/provider-vault:v${ARGOCD_ENV_crossplane_providers_vault_version}
