revert to erasureCoded

--- a/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
+++ b/gitops/applications/base/sc-storage/rook-ceph-cluster-values.yaml
@@ -89,11 +89,11 @@ cephObjectStores:
           size: 3
       dataPool:
         failureDomain: host
-        replicated:
-          size: ${ARGOCD_ENV_rook_ceph_pool_replication_size}
-        # erasureCoded:
-        #   dataChunks: 2
-        #   codingChunks: 1
+        # replicated:
+        #   size: ${ARGOCD_ENV_rook_ceph_pool_replication_size}
+        erasureCoded:
+          dataChunks: 2
+          codingChunks: 1
         parameters:
           bulk: "true"
       preservePoolsOnDelete: true
